# CppProjectPractice

./: .gitignore  CMakeLists.txt  README.md
src/: Example.cpp  Example.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  ExampleTests.cpp  Makefile  cmake_install.cmake
